find_package(Threads REQUIRED)
include(ExternalProject)

set(LIBPREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}")
set(LIBSUFFIX "${CMAKE_STATIC_LIBRARY_SUFFIX}")

set(GTEST_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/gtest")
ExternalProject_Add(
  GTestExternal
  SVN_REPOSITORY http://googletest.googlecode.com/svn/trunk
  PREFIX "${GTEST_PREFIX}"
  INSTALL_COMMAND ""
)

set(GTEST_LOCATION "${GTEST_PREFIX}/src/GTestExternal-build")
set(GTEST_INCLUDES "${GTEST_PREFIX}/src/GTestExternal/include")
set(GTEST_LIBRARY  "${GTEST_LOCATION}/${LIBPREFIX}gtest${LIBSUFFIX}")
set(GTEST_MAINLIB  "${GTEST_LOCATION}/${LIBPREFIX}gtest_main${LIBSUFFIX}")

add_library(GTest IMPORTED STATIC GLOBAL)
set_target_properties(
  GTest PROPERTIES
  IMPORTED_LOCATION "${GTEST_LIBRARY}"
  INTERFACE_INCLUDE_DIRECTORIES "${GTEST_INCLUDES}"
  IMPORTED_LINK_INTERFACE_LIBRARIES "${CMAKE_THREAD_LIBS_INIT}"
)

add_library(GTestMain IMPORTED STATIC GLOBAL)
set_target_properties(
  GTestMain PROPERTIES
  IMPORTED_LOCATION "${GTEST_MAINLIB}"
  IMPORTED_LINK_INTERFACE_LIBRARIES "${GTEST_LIBRARY};${CMAKE_THREAD_LIBS_INIT}"
)

add_dependencies(GTest GTestExternal)

set(GMOCK_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/gmock")
ExternalProject_Add(
  GMockExternal
  SVN_REPOSITORY http://googlemock.googlecode.com/svn/trunk
  PREFIX "${GMOCK_PREFIX}"
  INSTALL_COMMAND ""
)

set(GMOCK_LOCATION "${GMOCK_PREFIX}/src/GMockExternal-build")
set(GMOCK_INCLUDES "${GMOCK_PREFIX}/src/GMockExternal/include")
set(GMOCK_LIBRARY  "${GMOCK_LOCATION}/${LIBPREFIX}gmock${LIBSUFFIX}")

add_library(GMock IMPORTED STATIC GLOBAL)
set_target_properties(
  GMock PROPERTIES
  IMPORTED_LOCATION "${Gmock_LIBRARY}"
  INTERFACE_INCLUDE_DIRECTORIES "${GMOCK_INCLUDES}"
  IMPORTED_LINK_INTERFACE_LIBRARIES "${CMAKE_THREAD_LIBS_INIT}"
)

add_dependencies(GMock GMockExternal)
